# gigathon

./: README.md
ConsoleAnimation/: CMakeLists.txt  README.md
ConsoleAnimation/src/: main.cpp  utils.cpp  utils.h
MemoryGame/: CMakeLists.txt  README.md
MemoryGame/src/: game.cpp  main.cpp  utils.cpp
MemoryGame/src/headers/: game.h  utils.h
